# fastapi-genai-boilerplate

./: .env.sample  .gitignore  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  Plan.md  Procfile  RAILWAY_DEPLOYMENT.md  SETUP_GUIDE.md  pyproject.toml  railway.toml
alembic/: env.py
app/apis/v1/chat/: controller.py  models.py  rag_service.py
app/apis/v1/logs/: __init__.py  controller.py  models.py  service.py
app/apis/v1/policy/: __init__.py  controller.py  models.py  service.py
app/core/: config.py
app/models/: __init__.py  audit.py  base.py  policy.py
app/prompts/: rag_system_prompt.txt  rag_user_prompt.txt
app/services/audit/: __init__.py  logging_service.py
app/services/ingestion/: __init__.py  pdf_parser.py  policy_ingestion.py
app/services/llm/: __init__.py  gemini_service.py
app/services/rag/: __init__.py  retrieval_service.py
app/services/vector/: __init__.py  qdrant_service.py
tests/rag/: __init__.py  test_hallucination_prevention.py
